# fluxus

./: .gitignore  Cargo.toml  README.md  config.toml  fluxus.toml  rustfmt.toml
.cargo/: config.toml
assets/: config.toml
assets/config/: config.toml
bins/client/: Cargo.toml
bins/client/src/: main.rs
bins/server/: Cargo.toml
bins/server/src/: config.rs  lib.rs  schemas.rs  utils.rs
bins/server/src/futures/: never.rs
bins/server/src/handlers/: mod.rs
bins/server/src/server/: client.rs  command.rs  listener.rs  mod.rs  spawner.rs
client/: Cargo.toml
client/src/: cli_args.rs  command.rs  connection.rs  connection_slave.rs  error.rs  lib.rs
client/src/tcp/: command.rs  init.rs  loop_.rs  mod.rs  network.rs  server.rs  slave.rs
client/src/utils/: compression.rs
config/: config.toml
crates/flux-common/: Cargo.toml
crates/flux-common/src/: lib.rs
crates/flux-compression/: Cargo.toml
crates/flux-compression/src/: lib.rs  polymorphic.rs  traits.rs  zstd.rs
crates/flux-compression/src/tests/: zstd.rs
crates/flux-tcp/: Cargo.toml
crates/flux-tcp/src/: common.rs  error.rs  lib.rs  raw.rs  traits.rs
crates/flux-tcp/src/control/: reader.rs  writer.rs
crates/flux-tcp/src/flow/: reader.rs  writer.rs
crates/galaxy-network/: Cargo.toml
crates/galaxy-network/src/: descriptors.rs  error.rs  lib.rs  raw.rs  reader.rs  tests.rs  utils.rs  writer.rs
crates/galaxy-shrinker/: Cargo.toml
crates/galaxy-shrinker/src/: interface.rs  lib.rs  zstd.rs
crates/idpool/: Cargo.toml
crates/idpool/src/: flat.rs  interface.rs  lib.rs  prelude.rs  tests.rs
crates/tcp-flux/: Cargo.toml  README.md
crates/tcp-flux/src/: error.rs  lib.rs  listener.rs
crates/tcp-flux/src/connection/: any.rs  mod.rs  traits.rs
crates/tcp-flux/src/connection/master/: mod.rs  reader.rs
crates/tcp-flux/src/connection/master/payloads/: create_tcp_request.rs  info.rs  mod.rs
crates/tcp-flux/src/connection/master/reader/: client.rs  common.rs  mod.rs  server.rs
crates/tcp-flux/src/connection/master/writer/: client.rs  server.rs
crates/tcp-flux/src/types/: error_code.rs  mod.rs  pkt_base.rs
doc/: protocol_ru.md
docs/protocol/ru/: INDEX.md
docs/server/ru/: INDEX.md
lib/: lib.rs  router.rs
lib/config/: base.rs  error.rs  mod.rs  utils.rs
lib/tcp/: listener.rs  mod.rs  recv_future.rs  router.rs  state.rs  views.rs
lib/tcp/handlers/: message.rs  messages.rs  mod.rs  network.rs  utils.rs
lib/tcp/slave/: listener.rs  mod.rs  receiver.rs
server/: Cargo.toml
server/src/: config.rs  decl.rs  error.rs  lib.rs  traits.rs
server/src/communication/: control.rs  dispatcher.rs  flow.rs  http.rs  mod.rs  slave.rs  tcp.rs
server/src/data/: forward_queue.rs  id_pool.rs  idpool.rs  mod.rs  proxy.rs  recv_future.rs  server.rs  server_map.rs  services.rs  user.rs
server/src/data/command/: erased.rs  mod.rs  tcp.rs
server/src/data/commands/: base.rs  http.rs  master.rs  mod.rs  tcp.rs
server/src/data/http/: collection.rs  endpoint.rs  mod.rs
server/src/data/server/: tcp.rs
server/src/data/servers/: http.rs  mod.rs  tcp.rs
server/src/events/: dispatch.rs  dispatcher.rs  http.rs  mod.rs  tcp.rs
server/src/features/http/: feature.rs  mod.rs  storage.rs
server/src/http/: buffer.rs  connection.rs  destination.rs  listener.rs  mod.rs  responses.rs  state.rs
server/src/logic/: command.rs  mod.rs  recv.rs  tcp_server.rs  user.rs
server/src/protocol/: mod.rs
server/src/protocol/galaxy/: handler.rs  listener.rs  mod.rs  network_events.rs
server/src/protocols/: mod.rs
server/src/protocols/galaxy/: channel_handler.rs  connection.rs  events.rs  handler.rs  listener.rs  mod.rs
server/src/protocols/http/: command_handler.rs  listener.rs  mod.rs  service.rs
server/src/server/: listener.rs  mod.rs
server/src/server/control/: connection.rs
server/src/server/flow/: connection.rs
server/src/server/slave/: handler.rs  listener.rs
server/src/servers/: channels_map.rs  http.rs  mod.rs  tcp.rs
server/src/slaves/: mod.rs
server/src/slaves/tcp/: handler.rs  listener.rs
server/src/tcp/: command.rs  mod.rs  network.rs  proxy.rs  server.rs
server/src/utils/: buffer_ring.rs  compiler.rs  compression.rs  feature_gate.rs  http.rs  http_paths.rs  http_responses.rs  maybe_deallocate_chunk.rs  maybe_heap_chunk.rs  mod.rs  named_join_handle.rs  parsing.rs  proxy_command_listener.rs  proxy_getter.rs  proxy_shortcuts.rs  recv_future.rs  return_id.rs  shortcuts.rs  shutdown_token.rs
server/src/utils/features/: http.rs
