[workspace.package]
authors = ["nerodono"]
edition = "2021"
homepage = "https://github.com/nerodono/fluxus"
license = "MIT"
repository = "https://github.com/nerodono/fluxus"
workspace.resolver = "2"

[workspace]
members = ["packages/*", "crates/*"]

[workspace.dependencies.tokio]
version = "1.34.0"
default-features = false
features = ["net", "io-util", "rt", "rt-multi-thread", "sync"]

[workspace.dependencies]
thiserror = "1.0.50"
integral-enum = "3.0.1"
