[workspace.package]
authors = ["nerodono"]
edition = "2021"
homepage = "https://github.com/nerodono/fluxus"
license = "MIT"
repository = "https://github.com/nerodono/fluxus"

[workspace]
resolver = "2"
members = ["packages/*", "crates/*"]

[workspace.dependencies.tokio]
version = "1.34.0"
default-features = false
features = ["net", "io-util", "rt", "rt-multi-thread", "sync", "macros"]

[workspace.dependencies.flux-common]
version = "0.1.0"
path = "crates/flux-common"

[workspace.dependencies.tcp-flux]
version = "0.1.0"
path = "crates/tcp-flux"

[workspace.dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
owo-colors = "3.5.0"

bitflags = "2.4.1"

color-eyre = "0.6.2"
thiserror = "1.0.50"
integral-enum = "3.0.1"
