[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "neo"
path = "bin/main.rs"

[lib]
name = "neo"
path = "src/lib.rs"

[dependencies]
eyre.workspace = true

tokio.workspace = true
num_cpus.workspace = true

clap = { version = "4.2.1", features = ["derive"] }
owo-colors.workspace = true
envy.workspace = true
serde.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
