[package]
name = "server"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "neogrokd"
path = "bin/main.rs"

[features]
default = ["galaxy", "http"]
http = []
galaxy = []
nightly = []

[lib]
name = "neo"
path = "src/lib.rs"

[dependencies.idpool]
path = "../crates/idpool"
version = "0.1.0"

[dependencies.galaxy-network]
path = "../crates/galaxy-network"
version = "0.1.0"

[dependencies]
envy.workspace = true
integral-enum.workspace = true
serde.workspace = true
thiserror.workspace = true
owo-colors.workspace = true
eyre.workspace = true

tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

toml = "0.7.3"
num_cpus.workspace = true
rustc-hash.workspace = true
paste = "1.0.12"
cfg-if = "1.0.0"
const_format = "0.2.30"
