[package]
name = "server"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "fluxusd"
path = "bin/main.rs"

[lib]
name = "fluxus"
path = "src/lib.rs"

[features]
default = ["tcp", "http", "galaxy"]
tcp = []
udp = []
http = []
galaxy = []

[dependencies.idpool]
path = "../crates/idpool"
version = "0.1.0"

[dependencies.galaxy-network]
path = "../crates/galaxy-network"
version = "0.1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies.memchr]
version = "2.5.0"
default-features = false
features = ["std"]

[target.'cfg(not(target_arch = "x86_64"))'.dependencies.memchr]
version = "2.5.0"
default-features = false
features = ["std", "libc"]

#

[dependencies]
cocoa-purity.workspace = true
owo-colors.workspace = true
envy.workspace = true
eyre.workspace = true

rustc-hash.workspace = true

serde.workspace = true
thiserror.workspace = true
integral-enum.workspace = true

tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

cfg-if.workspace = true

num_cpus.workspace = true
futures = { version = "0.3.28", default-features = false, features = [
    "std",
    "async-await",
] }
paste = "1.0.12"
toml = "0.7.3"
ahash = "0.8.3"
const_format = "0.2.30"
