[package]
name = "server"
version = "0.1.0"
edition = "2021"


[features]
default = ["http", "api", "tcp", "dhall"]
http = []
api = []
tcp = []
dhall = ["dep:serde_dhall"]

[[bin]]
name = "fluxusd"
path = "bin/main.rs"

[lib]
name = "fluxus"
path = "src/lib.rs"

[dependencies.serde_dhall]
version = "0.12.1"
optional = true

[dependencies.toml]
workspace = true

[dependencies.flux-tcp]
version = "0.1.0"
path = "../crates/flux-tcp"

[dependencies.flux-compression]
version = "0.1.0"
path = "../crates/flux-compression"

[dependencies.url]
features = ["serde"]
version = "2.3"

[dependencies]
rustc-hash.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

envy.workspace = true
tokio.workspace = true
owo-colors.workspace = true

integral-enum.workspace = true
cocoa-purity.workspace = true
eyre.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

serde.workspace = true
futures = { version = "0.3.28", default-features = false, features = [
    "async-await",
    "std",
] }
heapless = { version = "0.7.16", default-features = false }
