[package]
name = "galaxy-network"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde", "tokio"]
serde = ["dep:serde"]
tokio = ["dep:tokio", "dep:galaxy-shrinker"]

[dependencies.serde]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true
features = ["net"]

[dependencies.galaxy-shrinker]
version = "0.1.0"
path = "../galaxy-shrinker"
optional = true

[dev-dependencies]
rstest = "0.17.0"

[dependencies]
bitflags = "2.0.2"

thiserror.workspace = true
integral-enum.workspace = true
derive_more = { version = "0.99.17", default-features = false, features = ["unwrap"] }
